welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:1: error: not found: value Direction
	setDirection(Direction.EST);
                     ^ZigZag:6: error: not found: value Direction
	setDirection(Direction.OUEST);
                     ^ZigZag:23: error: type mismatch;
 found   : Unit
 required: Boolean
		if (d())
                     ^ZigZag:27: error: not found: value y
				setPos(x,y+1)
                                         ^ZigZag:32: error: type mismatch;
 found   : Unit
 required: Boolean
		if (g())
                     ^ZigZag:36: error: not found: value y
				setPos(x,y+2)
                                         ^